--- a/src/operators.html
+++ b/src/operators.html
@@ -33,6 +33,16 @@
      console.log( 3 == '3' && 3 == 5)
      console.log( 3 =='3' || 3 == 5)
      console.log(!true)
+
+     //assignment
+     var age = 30;
+     age += 1;
+     age -= 2;
+     age *= 2;
+     age /= 2;
+
+     console.log(age);
+    
     </script>
 </body>
 </html>
